<resources>
    <string name="app_name">AndroidIntroductionProject</string>
    <string name="tv_name">이름</string>
    <string name="tv_id">아이디</string>
    <string name="tv_pw">비밀번호</string>
    <string name="tv_name_hint">이름을 입력하세요.</string>
    <string name="tv_id_hint">아이디를 입력하세요.</string>
    <string name="tv_pw_hint">비밀번호를 입력하세요.</string>
    <string name="btn_login">로그인</string>
    <string name="btn_join">회원가입</string>
    <string name="toast_sign_in_fail">아이디/비밀번호를 확인해주세요</string>
    <string name="toast_sign_in_success">로그인 성공</string>
    <string name="toast_sign_up_success">회원가입 성공</string>
    <string name="toast_sign_up_fail">입력되지 않은 정보가 있습니다.</string>

    <string name="intent_extra_id">idFromSignInActivity</string>
    <string name="intent_extra_pw">pwFromSignInActivity</string>
    <string name="tv_age">나이</string>
    <string name="tv_mbti">MBTI</string>
    <string name="btn_exit">종료</string>
</resources>