<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/iv_humanIcon_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_sign_up"
        app:layout_constraintBottom_toTopOf="@+id/et_id_signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name_signUp"
        style="@style/ComponentMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tv_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_humanIcon_signUp" />

    <EditText
        android:id="@+id/et_name_signUp"
        style="@style/ComponentMargin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/tv_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_signUp" />

    <TextView
        android:id="@+id/tv_id_signUp"
        style="@style/ComponentMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name_signUp" />


    <EditText
        android:id="@+id/et_id_signUp"
        style="@style/ComponentMargin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/tv_id_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_id_signUp" />

    <TextView
        android:id="@+id/tv_pw_signUp"
        style="@style/ComponentMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_pw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_id_signUp" />

    <EditText
        android:id="@+id/et_pw_signUp"
        style="@style/ComponentMargin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/tv_pw_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pw_signUp" />

    <Button
        android:id="@+id/btn_join_signUp"
        style="@style/ComponentMargin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="onClickedButtonSignUp"
        android:text="@string/btn_join"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pw_signUp" />

</androidx.constraintlayout.widget.ConstraintLayout>